[package]
name = "llm-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.2"
serde = { version = "1.0.148", features = ["derive"] }
shuttle-shared-db = { version = "0.35.2", features = ["postgres"] }
shuttle-runtime = "0.35.2"
tokio = "1.28.2"
tracing = "0.1.40"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
axum-openapi="0.0.0"
utoipa = {version="3.0.3", features=["axum_extras"]}
utoipa-swagger-ui = {version="3.0.2",features = ["axum"]}
tower-http = {version = "0.4.0",features = ["fs"]}